gitops/mgmt/spring-petclinic-data-jdbc/kustomize/base/petclinic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
