gitops/mgmt/spring-petclinic-data-jdbc/kustomize/base/petclinic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: petclinic.mgmt.cloud.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: petclinic-service
            port:
              number: 8080
